[gd_scene load_steps=11 format=2]

[ext_resource path="res://Pieces/Generator.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Controller.tscn" type="PackedScene" id=2]
[ext_resource path="res://Maps/BGTileset.tres" type="TileSet" id=3]
[ext_resource path="res://Maps/BGTiles.gd" type="Script" id=4]
[ext_resource path="res://Pieces/Generater_copy.gd" type="Script" id=5]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.562963, 1 )
colors = PoolColorArray( 0.956863, 0.105882, 0.0352941, 1, 0.964706, 0.890196, 0.0196078, 0.611765, 0.0156863, 0.945098, 0.933333, 0.290196 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.569318 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 300.0
initial_velocity_random = 0.8
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 15.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[node name="Map" type="Node2D"]

[node name="BGTiles" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 131072, 0, 0, 131073, 3, 0, 131074, 3, 0, 131075, 3, 0, 131076, 3, 0, 131077, 3, 0, 131078, 3, 0, 131079, 3, 0, 131080, 3, 0, 131081, 3, 0, 131082, 0, 0, 196608, 0, 0, 196609, 7, 0, 196610, 7, 0, 196611, 7, 0, 196612, 7, 0, 196613, 7, 0, 196614, 7, 0, 196615, 7, 0, 196616, 7, 0, 196617, 15, 0, 196618, 0, 0, 262144, 0, 0, 262145, 7, 0, 262146, 7, 0, 262147, 7, 0, 262148, 7, 0, 262149, 7, 0, 262150, 7, 0, 262151, 7, 0, 262152, 15, 0, 262153, 6, 0, 262154, 0, 0, 327680, 0, 0, 327681, 7, 0, 327682, 7, 0, 327683, 7, 0, 327684, 7, 0, 327685, 7, 0, 327686, 7, 0, 327687, 15, 0, 327688, 6, 0, 327689, 6, 0, 327690, 0, 0, 393216, 0, 0, 393217, 7, 0, 393218, 7, 0, 393219, 7, 0, 393220, 7, 0, 393221, 7, 0, 393222, 15, 0, 393223, 6, 0, 393224, 6, 0, 393225, 6, 0, 393226, 0, 0, 458752, 0, 0, 458753, 7, 0, 458754, 7, 0, 458755, 7, 0, 458756, 7, 0, 458757, 15, 0, 458758, 6, 0, 458759, 6, 0, 458760, 6, 0, 458761, 6, 0, 458762, 0, 0, 524288, 0, 0, 524289, 7, 0, 524290, 7, 0, 524291, 7, 0, 524292, 15, 0, 524293, 6, 0, 524294, 6, 0, 524295, 6, 0, 524296, 6, 0, 524297, 6, 0, 524298, 0, 0, 589824, 0, 0, 589825, 7, 0, 589826, 7, 0, 589827, 15, 0, 589828, 6, 0, 589829, 6, 0, 589830, 6, 0, 589831, 6, 0, 589832, 6, 0, 589833, 6, 0, 589834, 0, 0, 655360, 0, 0, 655361, 7, 0, 655362, 15, 0, 655363, 6, 0, 655364, 6, 0, 655365, 6, 0, 655366, 6, 0, 655367, 6, 0, 655368, 6, 0, 655369, 6, 0, 655370, 0, 0, 720896, 0, 0, 720897, 15, 0, 720898, 6, 0, 720899, 6, 0, 720900, 6, 0, 720901, 6, 0, 720902, 6, 0, 720903, 6, 0, 720904, 6, 0, 720905, 6, 0, 720906, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 917504, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 983040, 0, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0 )
script = ExtResource( 4 )

[node name="Generator" parent="." instance=ExtResource( 1 )]
script = ExtResource( 5 )
offset = 64
Tiles = NodePath("../BGTiles")

[node name="IsMoving" type="Timer" parent="Generator"]
wait_time = 0.4
autostart = true

[node name="FireExplosion" type="Particles2D" parent="Generator"]
visible = false
emitting = false
amount = 40
lifetime = 0.4
one_shot = true
process_material = SubResource( 5 )

[node name="Controller" parent="." instance=ExtResource( 2 )]
Generator = NodePath("../../Map/Generator")

[node name="destroy_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="collapse_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="refill_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="Generator/IsMoving" to="Generator" method="_on_IsMoving_timeout"]
[connection signal="timeout" from="destroy_timer" to="Generator" method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="collapse_timer" to="Generator" method="_on_collapse_timer_timeout"]
[connection signal="timeout" from="refill_timer" to="Generator" method="_on_refill_timer_timeout"]
